rename main.css to tailwind.css to improve searchability

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
 @plugin "daisyui" {
-    themes: retro --default;
+    themes: retro --default, halloween --prefersdark;
     logs: false;
 }
